# proyectoy

./: pyproject.toml  request_EC.txt
proyectoy/: functions.py
proyectoy/sources/: dataloader.py
