[tool.poetry]
name = "proyectoy"
version = "0.1.0"
description = ""
authors = ["Mifra Burneo <mifraburneo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
